将more添加上去

--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -79,5 +79,6 @@ smart_menu:
 friends:
   litten: http://litten.me/
   UI: http://www.ui.cn/
+  components: http://www.layui.com/demo/
 
 aboutme: guimeisang <br>毕业于湖南大学 <br>前端开发，只想过着自己想过的生活 <br>年轻无为，卖马为生。
