--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -2,7 +2,7 @@
 
 menu:
   主页: /
-  相册: /phones
+  相册: /instagram
 
 # SubNav
 subnav:
@@ -34,9 +34,12 @@ excerpt_link: more
 # 文章卡片右下角常驻链接，不需要请设置为false
 show_all_link: '展开全文'
 # 数学公式
-mathjax: false
+mathjax: true
 # 是否在新窗口打开链接
 open_in_new: false
+
+# 是否开启动画效果
+animate: true
 
 # 打赏
 # 请在需要打赏的文章的md文件头部，设置属性reward: true
