--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -2,7 +2,7 @@
 
 menu:
   主页: /
-  相册: /instagram
+  相册: /phones
 
 # SubNav
 subnav:
@@ -37,9 +37,6 @@ show_all_link: '展开全文'
 mathjax: true
 # 是否在新窗口打开链接
 open_in_new: false
-
-# 是否开启动画效果
-animate: true
 
 # 打赏
 # 请在需要打赏的文章的md文件头部，设置属性reward: true
